--- a/Ls.html
+++ b/Ls.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Shopping.css">
+  <link rel="stylesheet" href="Ls.css">
   <title>Document</title>
 </head>
 <body class="lightStore">
@@ -16,8 +16,6 @@
     <h2>Your Cart</h2>
     <ul id="cart-items"></ul>
     <p>Total: $<span id="total-price">0</span></p>
-
-    
 
     <!-- Checkout Button -->
     <button id="checkout-button" onclick="checkout()">Checkout</button>
@@ -84,5 +82,5 @@
     <!-- Add more products as needed -->
   </ul>
 </body>
-<script src="Shopping.js"></script>
+<script src="Ls.js"></script>
 </html>
