--- a/Shopping.html
+++ b/Shopping.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body class="lightStore">
-  <h1 onclick="toggleClassPlayer()">LOLLIPOP STORE</h1>
+  <h1 onclick="toggleClassPlayer()">Lollip<ion-icon name="storefront-outline"></ion-icon>P Club</h1>
 
   <!-- Show/Hide Cart Button -->
   <button id="toggle-cart" onclick="toggleCart()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
@@ -94,4 +94,6 @@
   </ul>
 </body>
 <script src="Shopping.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </html>
