--- a/Shopping.html
+++ b/Shopping.html
@@ -29,7 +29,7 @@
     <!--Product List -->
     <div class="product">
       <img src="Shirt1pic.webp">
-      <h3>Young & Rich(T-shirt)1</h3>
+      <h3>Young & Rich - Men's T-shirt</h3>
       <p>Price: $14.50</p>
       <button class="add-to-cart" data-product="Product 1" data-price="14.50">Add to Cart</button>
     </div>
@@ -37,51 +37,52 @@
     
     <div class="product">
       <img src="Vara pump - Women.webp">
-      <h3>Vara pump - Ferragamo Women</h3>
+      <h3>Vara pump - Ferragamo Women's shoes</h3>
       <p>Price: $15</p>
-      <button class="add-to-cart" data-product="Product 8" data-price="15">Add to Cart</button>
+      <button class="add-to-cart" data-product="Product 2" data-price="15">Add to Cart</button>
     </div>
 
     <div class="product">
       <img src="Shirt2pic.jpg">
       <h3>Converse T-shirt</h3>
       <p>Price: $12.75</p>
-      <button class="add-to-cart" data-product="Product 2" data-price="12.50">Add to Cart</button>
+      <button class="add-to-cart" data-product="Product 3" data-price="12.50">Add to Cart</button>
     </div>
 
     <div class="product">
       <img src="NIKE AIR MAX SHOES - NIKE AIR MAX 97 (2).png">
       <h3>Nike Air Max Shoes - Nike Air Max 97</h3>
       <p>Price: $15</p>
-      <button class="add-to-cart" data-product="Product 6" data-price="15">Add to Cart</button>
-    </div>
-    
-    <div class="product">
-      <img src="Shirt3pic.webp">
-      <h3>Product 3</h3>
-      <p>Price: $25</p>
-      <button class="add-to-cart" data-product="Product 3" data-price="25">Add to Cart</button>
+      <button class="add-to-cart" data-product="Product 4" data-price="15">Add to Cart</button>
     </div>
 
     <div class="product">
       <img src="2 Chainz x Versace Chain Reaction Shoes.webp">
       <h3>2 Chainz x Versace Chain Reaction Shoes</h3>
       <p>Price: $10.75</p>
-      <button class="add-to-cart" data-product="Product 4" data-price="10.75">Add to Cart</button>
+      <button class="add-to-cart" data-product="Product 5" data-price="10.75">Add to Cart</button>
     </div>
 
     <div class="product">
       <img src="Nike Air Max 97 By You Custom Men's Shoes 1.png">
       <h3>Nike Air Max 97 By You Custom Men's Shoes</h3>
       <p>Price: $20</p>
-      <button class="add-to-cart" data-product="Product 5" data-price="20">Add to Cart</button>
+      <button class="add-to-cart" data-product="Product 6" data-price="20">Add to Cart</button>
     </div>
+
+    <div class="product">
+      <img src="Shirt3pic.webp">
+      <h3>Design Urban - Men's T-shirt</h3>
+      <p>Price: $25</p>
+      <button class="add-to-cart" data-product="Product 7" data-price="25">Add to Cart</button>
+    </div>
+
 
     <div class="product">
       <img src="Prada Men's America's Cup Patent Leather Patchwork Sneakers, Mandarin Orange Silver, Men's, 14D,.webp">
       <h3>Prada Men's Sneaker,  Cup Patent Leather, Mandarin Orange Silver</h3>
       <p>Price: $10</p>
-      <button class="add-to-cart" data-product="Product 7" data-price="10">Add to Cart</button>
+      <button class="add-to-cart" data-product="Product 8" data-price="10">Add to Cart</button>
     </div>
 
     <!-- Add more products as needed -->
