--- a/Shopping.html
+++ b/Shopping.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body class="lightStore">
-  <h1 onclick="toggleClassPlayer()">Lollip<ion-icon name="storefront-outline"></ion-icon>P Club</h1>
+  <h1 onclick="toggleClassPlayer()">LOLLIP<ion-icon name="color-palette-outline"></ion-icon>P CLUB</h1>
 
   <!-- Show/Hide Cart Button -->
   <button id="toggle-cart" onclick="toggleCart()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
