--- a/Shopping.html
+++ b/Shopping.html
@@ -21,6 +21,48 @@
     <!-- Checkout Button -->
     <button id="checkout-button" onclick="checkout()">Check-Out</button>
   </div>
+ 
+  <div class="container">
+    <div class="Box">
+        <div class="img">
+
+            <div class="imgBox" style="--i:1;">
+                <a href="#"><img src="2 Chainz x Versace Chain Reaction Shoes.webp"></a>
+            </div>
+
+            <div class="imgBox" style="--i:2;">
+                <a href="#"><img src="Nike Air Max 97 By You Custom Men's Shoes 1.png"></a>
+            </div>
+
+            <div class="imgBox" style="--i:3;">
+                <a href="#"><img src="NIKE AIR MAX SHOES - NIKE AIR MAX 97 (2).png"></a>
+            </div>
+
+            <div class="imgBox" style="--i:4;">
+              <a href="#"><img src="Prada Men's America's Cup Patent Leather Patchwork Sneakers, Mandarin Orange Silver, Men's, 14D,.webp"></a>
+          </div>
+
+          <div class="imgBox" style="--i:5;">
+            <a href="#"><img src="Shirt1pic.webp"></a>
+        </div>
+
+        <div class="imgBox" style="--i:6;">
+          <a href="#"><img src="Shirt2pic.jpg"></a>
+        </div>  
+         
+          <div class="imgBox" style="--i:7;">
+            <a href="#"><img src="Shirt3pic.webp"></a>
+          </div>
+
+          <div class="imgBox" style="--i:8;">
+          <a href="#"><img src="Vara pump - Women.webp"></a>
+          </div>
+
+
+        </div>
+    </div>
+</div> 
+
 
   <ul class="product-List">
 
@@ -91,3 +133,4 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </html>
+  
