--- a/Shopping.html
+++ b/Shopping.html
@@ -9,7 +9,6 @@
 </head>
 <body class="lightStore">
   <h1 onclick="toggleClassPlayer()">LOLLIP<ion-icon name="color-palette-outline"></ion-icon>P CLUB</h1>
-
   <!-- Show/Hide Cart Button -->
   <button id="toggle-cart" onclick="toggleCart()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
 
@@ -22,7 +21,10 @@
     <button id="checkout-button" onclick="checkout()">Check-Out</button>
   </div>
  
+   <!-- Navigation Section -->
+
   <div class="container">
+    <h6>LOLLIP<ion-icon name="headset-sharp"></ion-icon>P CLUB</h6>
     <div class="Box">
         <div class="img">
 
