--- a/Shopping.html
+++ b/Shopping.html
@@ -23,6 +23,21 @@
  
    <!-- Navigation Section -->
 
+   <div class="navigation">
+        
+		<div class="mlb"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
+		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
+        <div class="mlb"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
+		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
+        <div class="mlb"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
+		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
+        <div class="mlb"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
+		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
+        <div class="mlb"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
+		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
+			
+    </div>
+
   <div class="container">
     <h6>LOLLIP<ion-icon name="headset-sharp"></ion-icon>P CLUB</h6>
     <div class="Box">
