--- a/Lsneakers.html
+++ b/Lsneakers.html
@@ -9,6 +9,7 @@
 </head>
 <body class="lightStore">
   <h1 onclick="toggleClassPlayer()">LOLLIP<ion-icon name="color-palette-outline"></ion-icon>P CLUB</h1>
+  <h4>Select Sneakers</h4>
   <!-- Show/Hide Cart Button -->
   <button id="toggle-cart" onclick="toggleCart()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
 
@@ -20,67 +21,7 @@
     <!-- Checkout Button -->
     <button id="checkout-button" onclick="checkout()">Check-Out</button>
   </div>
- 
-   <!-- Navigation Section -->
-
-   <div class="navigation">
-        
-		<div class="L-Accesories-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div>
-    <div class="L-Sneakers-Nav"><a href="Lsneakers.html"><ion-icon name="finger-print"></ion-icon></a></div>
-    <div class="L-Clothing-Nav"><a href="Lclothing.html"><ion-icon name="finger-print"></ion-icon></a></div>
-    <div class="L-Shoes-Nav"><a href="Lshoes.html"><ion-icon name="finger-print"></ion-icon></a></div>
-    <div class="L-Kitchen-Nav"><a href="Lkitchen.html"><ion-icon name="finger-print"></ion-icon></a></div>
-		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
-    <div class="mlb"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
-		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
-    <div class="mlb"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
-		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
-			
-    </div>
-
-  <div class="container">
-    <h6>LOLLIP<ion-icon name="headset-sharp"></ion-icon>P CLUB</h6>
-    <div class="Box">
-        <div class="img">
-
-            <div class="imgBox" style="--i:1;">
-                <a href="#"><img src="2 Chainz x Versace Chain Reaction Shoes.webp"></a>
-            </div>
-
-            <div class="imgBox" style="--i:2;">
-                <a href="#"><img src="Nike Air Max 97 By You Custom Men's Shoes 1.png"></a>
-            </div>
-
-            <div class="imgBox" style="--i:3;">
-                <a href="#"><img src="NIKE AIR MAX SHOES - NIKE AIR MAX 97 (2).png"></a>
-            </div>
-
-            <div class="imgBox" style="--i:4;">
-              <a href="#"><img src="Prada Men's America's Cup Patent Leather Patchwork Sneakers, Mandarin Orange Silver, Men's, 14D,.webp"></a>
-          </div>
-
-          <div class="imgBox" style="--i:5;">
-            <a href="#"><img src="Shirt1pic.webp"></a>
-        </div>
-
-        <div class="imgBox" style="--i:6;">
-          <a href="#"><img src="Shirt2pic.jpg"></a>
-        </div>  
-         
-          <div class="imgBox" style="--i:7;">
-            <a href="#"><img src="Shirt3pic.webp"></a>
-          </div>
-
-          <div class="imgBox" style="--i:8;">
-          <a href="#"><img src="Vara pump - Women.webp"></a>
-          </div>
-
-
-        </div>
-    </div>
-</div> 
-
-
+  
   <ul class="product-List">
 
     <!--Product List -->
@@ -150,4 +91,3 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </html>
-  
