--- a/Laccesories.html
+++ b/Laccesories.html
@@ -27,7 +27,7 @@
 
     <div class="navigation">
         
-      <div class="nba"><a href="#"><ion-icon name="finger-print"></ion-icon></a></div>
+      <div class="L-Glasses-Nav"><a href="#"><ion-icon name="finger-print"></ion-icon></a></div>
       <div class="mlb"><a href="#"><ion-icon name="finger-print"></ion-icon></a></div>
       <div class="nba"><a href="#"><ion-icon name="finger-print"></ion-icon></a></div>
       <div class="mlb"><a href="#"><ion-icon name="finger-print"></ion-icon></a></div>
