--- a/Shopping.html
+++ b/Shopping.html
@@ -25,17 +25,18 @@
 
    <div class="navigation">
      
-    <div class="L-RealState-Nav"><a href="LRealState.html"><ion-icon name="finger-print"></ion-icon></a></div>
-		<div class="L-Kitchen-Nav"><a href="Lkitchen.html"><ion-icon name="finger-print"></ion-icon></a></div>
+    <div class="L-Clothing-Nav"><a href="Lclothing.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Accesories-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Sneakers-Nav"><a href="Lsneakers.html"><ion-icon name="finger-print"></ion-icon></a></div>
-    <div class="L-Clothing-Nav"><a href="Lclothing.html"><ion-icon name="finger-print"></ion-icon></a></div>
+    <div class="L-Watches-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div> 
+    <div class="L-Glasses-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Shoes-Nav"><a href="Lshoes.html"><ion-icon name="finger-print"></ion-icon></a></div>
+    <div class="L-Kitchen-Nav"><a href="Lkitchen.html"><ion-icon name="finger-print"></ion-icon></a></div>
+    <div class="L-RealState-Nav"><a href="LRealState.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="mlb"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
 		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
-    <div class="mlb"><a href="lh2.html"><ion-icon name="finger-print"></ion-icon></a></div>
-		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
-			
+	
+
     </div>
 
   <div class="container">
