--- a/Shopping.html
+++ b/Shopping.html
@@ -34,7 +34,7 @@
     <div class="L-Shoes-Nav"><a href="Lshoes.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Kitchen-Nav"><a href="Lkitchen.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-RealState-Nav"><a href="LRealState.html"><ion-icon name="finger-print"></ion-icon></a></div>
-		<div class="nba"><a href="lh4.html"><ion-icon name="finger-print"></ion-icon></a></div>
+		<div class="nba"><a href="Ls2.html"><ion-icon name="finger-print"></ion-icon></a></div>
 	
 
     </div>
