--- a/Ls2.html
+++ b/Ls2.html
@@ -27,11 +27,12 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 0 20px;
+
+    gap: 10px;
 }
 
 .slider-controls button {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: darkblue;
     color: white;
     border: none;
     padding: 10px;
@@ -47,14 +48,14 @@
 button {
     margin-top: 10px;
     padding: 5px 10px;
-    background-color: #007bff;
+    background-color: blue;
     color: white;
     border: none;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: green;
 }
 
     </style>
