--- a/Ls2.html
+++ b/Ls2.html
@@ -64,7 +64,7 @@ button:hover {
  
     <h1 onclick="toggleClassPlayer()">LOLLIP<ion-icon name="color-palette-outline"></ion-icon>P CLUB</h1>
     <input type="text" id="searchInput" placeholder="Search for products..." oninput="searchProducts()">
-    <button id="voiceSearchButton">🎤</button> <br>
+    <button id="voiceSearchButton">🎙️</button> <br>
     
   <!-- Button to toggle the cart visibility -->
   <button id="toggleCartButton" onclick="toggleCartVisibility()">Show Cart</button>
