--- a/Shopping.html
+++ b/Shopping.html
@@ -70,7 +70,6 @@
       <!-- Search Bar -->
       <input type="text" id="search-bar" placeholder=".;.LOLLITA CLUB.;." oninput="searchProducts()">
       <button id="voice-search-btn" aria-label="Voice Search">🎙️</button>      
-    <br>
     <!-- Show/Hide Cart Button -->
     <button id="toggle-cart" onclick="toggleCart()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
   
@@ -103,37 +102,51 @@
     </div>
 
   <!-- Product List -->
-  <ul class="product-List">
-    <div class="product">
-      <img src="Shirt1pic.webp" onclick="openModal(0)">
-      <h3>Young & Rich - Men's T-shirt</h3>
-      <p>Price: $14.50</p>
-      <button class="add-to-cart" data-product="Product 1" data-price="14.50">Add to Cart</button>
-    </div>
+ <!-- Product List -->
+<ul class="product-List">
+  <div class="product">
+    <img src="Shirt1pic.webp" onclick="openModal(0)">
+    <h3>Young & Rich - Men's T-shirt</h3>
+    <p>Price: $14.50</p>
+    <label for="quantity1">Qty:</label>
+    <input type="number" id="quantity1" name="quantity" min="1" value="1" max="10">
+    <p>In Stock: <span id="stock1">10</span></p> <!-- Example stock value -->
+    <button class="add-to-cart" data-product="Product 1" data-price="14.50">Add to Cart</button>
+  </div>
 
-    <div class="product">
-      <img src="Vara pump - Women.webp" onclick="openModal(1)">
-      <h3>Vara pump - Ferragamo Women's shoes</h3>
-      <p>Price: $15</p>
-      <button class="add-to-cart" data-product="Product 2" data-price="15">Add to Cart</button>
-    </div>
+  <div class="product">
+    <img src="Vara pump - Women.webp" onclick="openModal(1)">
+    <h3>Vara pump - Ferragamo Women's shoes</h3>
+    <p>Price: $15</p>
+    <label for="quantity2">Qty:</label>
+    <input type="number" id="quantity2" name="quantity" min="1" value="1" max="5">
+    <p>In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <button class="add-to-cart" data-product="Product 2" data-price="15">Add to Cart</button>
+  </div>
 
-    <div class="product">
-      <img src="Shirt2pic.jpg" onclick="openModal(2)">
-      <h3>Converse T-shirt</h3>
-      <p>Price: $12.75</p>
-      <button class="add-to-cart" data-product="Product 3" data-price="12.50">Add to Cart</button>
-    </div>
+  <div class="product">
+    <img src="Shirt2pic.jpg" onclick="openModal(2)">
+    <h3>Converse T-shirt</h3>
+    <p>Price: $12.75</p>
+    <label for="quantity3">Qty:</label>
+    <input type="number" id="quantity3" name="quantity" min="1" value="1" max="8">
+    <p>In Stock: <span id="stock3">8</span></p> <!-- Example stock value -->
+    <button class="add-to-cart" data-product="Product 3" data-price="12.50">Add to Cart</button>
+  </div>
 
-    <div class="product">
-      <img src="NIKE AIR MAX SHOES - NIKE AIR MAX 97 (2).png" onclick="openModal(3)">
-      <h3>Nike Air Max Shoes - Nike Air Max 97</h3>
-      <p>Price: $15</p>
-      <button class="add-to-cart" data-product="Product 4" data-price="15">Add to Cart</button>
-    </div>
+  <div class="product">
+    <img src="NIKE AIR MAX SHOES - NIKE AIR MAX 97 (2).png" onclick="openModal(3)">
+    <h3>Nike Air Max Shoes - Nike Air Max 97</h3>
+    <p>Price: $15</p>
+    <label for="quantity4">Qty:</label>
+    <input type="number" id="quantity4" name="quantity" min="1" value="1" max="6">
+    <p>In Stock: <span id="stock4">6</span></p> <!-- Example stock value -->
+    <button class="add-to-cart" data-product="Product 4" data-price="15">Add to Cart</button>
+  </div>
 
-    <!-- Add other products here similarly -->
-  </ul>
+  <!-- Add other products here similarly -->
+</ul>
+
 
   <!-- Modal for displaying images -->
   <div id="myModal" class="modal">
@@ -255,6 +268,21 @@ recognition.onerror = function(event) {
   console.log("Error occurred in recognition: " + event.error);
 };
 
+////To handle QT////
+
+document.querySelectorAll('.product').forEach(function(product, index) {
+    let quantityInput = product.querySelector('input[type="number"]');
+    let stock = parseInt(product.querySelector(`#stock${index + 1}`).textContent);
+
+    quantityInput.addEventListener('input', function() {
+        let selectedQuantity = parseInt(quantityInput.value);
+        
+        if (selectedQuantity > stock) {
+            quantityInput.value = stock; // Set the quantity to max stock value
+            alert("Quantity exceeds available stock!");
+        }
+    });
+});
 
 
 
