--- a/Shopping.html
+++ b/Shopping.html
@@ -101,46 +101,45 @@
 
     </div>
 
-  <!-- Product List -->
  <!-- Product List -->
 <ul class="product-List">
   <div class="product">
     <img src="Shirt1pic.webp" onclick="openModal(0)">
     <h3>Young & Rich - Men's T-shirt</h3>
-    <p>Price: $14.50</p>
+    <p id="Price-tag">$14.50</p>
     <label for="quantity1">Qty:</label>
     <input type="number" id="quantity1" name="quantity" min="1" value="1" max="10">
-    <p>In Stock: <span id="stock1">10</span></p> <!-- Example stock value -->
+    <p id="in-Stock">In Stock: <span id="stock1">10</span></p> <!-- Example stock value -->
     <button class="add-to-cart" data-product="Product 1" data-price="14.50">Add to Cart</button>
   </div>
 
   <div class="product">
     <img src="Vara pump - Women.webp" onclick="openModal(1)">
     <h3>Vara pump - Ferragamo Women's shoes</h3>
-    <p>Price: $15</p>
+    <p id="Price-tag">$15</p>
     <label for="quantity2">Qty:</label>
     <input type="number" id="quantity2" name="quantity" min="1" value="1" max="5">
-    <p>In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
+    <p id="in-Stock">In Stock: <span id="stock2">5</span></p> <!-- Example stock value -->
     <button class="add-to-cart" data-product="Product 2" data-price="15">Add to Cart</button>
   </div>
 
   <div class="product">
     <img src="Shirt2pic.jpg" onclick="openModal(2)">
-    <h3>Converse T-shirt</h3>
-    <p>Price: $12.75</p>
+    <h3>Converse T-shirt - Converse T-shirt</h3>
+    <p id="Price-tag">$12.75</p>
     <label for="quantity3">Qty:</label>
     <input type="number" id="quantity3" name="quantity" min="1" value="1" max="8">
-    <p>In Stock: <span id="stock3">8</span></p> <!-- Example stock value -->
+    <p id="in-Stock">In Stock: <span id="stock3">8</span></p> <!-- Example stock value -->
     <button class="add-to-cart" data-product="Product 3" data-price="12.50">Add to Cart</button>
   </div>
 
   <div class="product">
     <img src="NIKE AIR MAX SHOES - NIKE AIR MAX 97 (2).png" onclick="openModal(3)">
     <h3>Nike Air Max Shoes - Nike Air Max 97</h3>
-    <p>Price: $15</p>
+    <p id="Price-tag">$15</p>
     <label for="quantity4">Qty:</label>
     <input type="number" id="quantity4" name="quantity" min="1" value="1" max="6">
-    <p>In Stock: <span id="stock4">6</span></p> <!-- Example stock value -->
+    <p id="in-Stock">In Stock: <span id="stock4">6</span></p> <!-- Example stock value -->
     <button class="add-to-cart" data-product="Product 4" data-price="15">Add to Cart</button>
   </div>
 
