--- a/Shopping.html
+++ b/Shopping.html
@@ -86,7 +86,7 @@
 
    <div class="navigation">
      
-    <div class="nba"><a href="Ls2.html"><ion-icon name="finger-print"></ion-icon></a></div>
+    <div class="nba"><a href="Shoppin222.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Clothing-Nav"><a href="Lclothing.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Accesories-Nav"><a href="Laccesories.html"><ion-icon name="finger-print"></ion-icon></a></div>
     <div class="L-Sneakers-Nav"><a href="Lsneakers.html"><ion-icon name="finger-print"></ion-icon></a></div>
