--- a/UserDash.html
+++ b/UserDash.html
@@ -8,7 +8,7 @@
   <title>LOLLIPOP CLUB</title>
   <style>
     /* Add styles for user dashboard */
-    .dashboard, .product-list, .cart {
+    .dashboard, .product-list, .cart, .login-form, .register-form {
       display: none;
     }
 
@@ -39,9 +39,42 @@
     #add-product-form input {
       margin: 5px 0;
     }
+
+    .login-form input, .register-form input {
+      margin: 10px;
+    }
+
+    .login-form button, .register-form button {
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
+
+  <!-- Login Form -->
+  <div id="login-form" class="login-form">
+    <h2>Login to Lollipop Club</h2>
+    <form id="login-form-submit">
+      <input type="text" id="login-username" placeholder="Username" required>
+      <input type="password" id="login-password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
+    <p id="login-error" style="color:red;"></p>
+    <p>Don't have an account? <a href="#" onclick="showRegisterForm()">Register here</a></p>
+  </div>
+
+  <!-- Register Form -->
+  <div id="register-form" class="register-form">
+    <h2>Create Account</h2>
+    <form id="register-form-submit">
+      <input type="text" id="register-username" placeholder="Username" required>
+      <input type="password" id="register-password" placeholder="Password" required>
+      <input type="password" id="register-confirm-password" placeholder="Confirm Password" required>
+      <button type="submit">Register</button>
+    </form>
+    <p id="register-error" style="color:red;"></p>
+    <p>Already have an account? <a href="#" onclick="showLoginForm()">Login here</a></p>
+  </div>
 
   <!-- User Dashboard -->
   <div id="user-dashboard" class="dashboard">
@@ -84,23 +117,65 @@
   </div>
 
   <script>
-    // Simulate a logged-in user for demonstration
-    let currentUser = {
-      name: 'John Doe',
-      id: 'user123',
-      products: [] // User's products (for sellers)
-    };
+    const users = []; // Store registered users
+    let currentUser = null; // This will store the logged-in user
 
-    // Simulate available products for buyers
-    const availableProducts = [
-      { name: 'T-Shirt', price: 10, quantity: 5, image: 'shirt.jpg' },
-      { name: 'Shoes', price: 20, quantity: 3, image: 'shoes.jpg' }
-    ];
+    // Show the login form
+    function showLoginForm() {
+      document.getElementById('login-form').style.display = 'block';
+      document.getElementById('register-form').style.display = 'none';
+      document.getElementById('user-dashboard').style.display = 'none';
+      document.getElementById('product-list').style.display = 'none';
+    }
+
+    // Show the register form
+    function showRegisterForm() {
+      document.getElementById('register-form').style.display = 'block';
+      document.getElementById('login-form').style.display = 'none';
+    }
+
+    // Handle login form submission
+    document.getElementById('login-form-submit').addEventListener('submit', function(event) {
+      event.preventDefault();
+      const username = document.getElementById('login-username').value;
+      const password = document.getElementById('login-password').value;
+      const user = users.find(u => u.username === username && u.password === password);
+
+      if (user) {
+        currentUser = user;
+        showDashboard();
+        document.getElementById('login-error').style.display = 'none';
+      } else {
+        document.getElementById('login-error').textContent = 'Invalid username or password!';
+      }
+    });
+
+    // Handle register form submission
+    document.getElementById('register-form-submit').addEventListener('submit', function(event) {
+      event.preventDefault();
+      const username = document.getElementById('register-username').value;
+      const password = document.getElementById('register-password').value;
+      const confirmPassword = document.getElementById('register-confirm-password').value;
+
+      if (password === confirmPassword) {
+        if (users.find(u => u.username === username)) {
+          document.getElementById('register-error').textContent = 'Username already exists!';
+        } else {
+          const newUser = { username, password, name: username, id: `user${Date.now()}`, products: [] };
+          users.push(newUser);
+          alert('Registration successful! Please log in.');
+          showLoginForm();
+        }
+      } else {
+        document.getElementById('register-error').textContent = 'Passwords do not match!';
+      }
+    });
 
     // Show user dashboard after login
     function showDashboard() {
+      document.getElementById('login-form').style.display = 'none';
       document.getElementById('user-name').textContent = currentUser.name;
-      document.getElementById('user-dashboard').classList.add('show');
+      document.getElementById('user-dashboard').style.display = 'block';
       showUserProducts();
       showAvailableProducts();
     }
@@ -163,66 +238,20 @@
       document.getElementById('add-product-form').style.display = 'none';
     }
 
-    // Add product to cart (for buyers)
-    function addToCart(index) {
-      const cart = JSON.parse(localStorage.getItem('cart')) || [];
-      const product = availableProducts[index];
-      cart.push(product);
-      localStorage.setItem('cart', JSON.stringify(cart));
-      updateCartDisplay();
-    }
-
-    // Update cart display
-    function updateCartDisplay() {
-      const cart = JSON.parse(localStorage.getItem('cart')) || [];
-      const cartItemsContainer = document.getElementById('cart-items');
-      const totalPriceElement = document.getElementById('total-price');
-      let totalPrice = 0;
-
-      cartItemsContainer.innerHTML = '';
-      cart.forEach((item, index) => {
-        const listItem = document.createElement('li');
-        listItem.innerHTML = `
-          <img src="${item.image}" alt="${item.name}" width="50" height="50">
-          ${item.name} - $${item.price}
-          <button onclick="removeFromCart(${index})">Remove</button>
-        `;
-        cartItemsContainer.appendChild(listItem);
-        totalPrice += item.price;
-      });
-
-      totalPriceElement.textContent = totalPrice.toFixed(2);
-    }
-
-    // Remove item from cart
-    function removeFromCart(index) {
-      const cart = JSON.parse(localStorage.getItem('cart')) || [];
-      cart.splice(index, 1);
-      localStorage.setItem('cart', JSON.stringify(cart));
-      updateCartDisplay();
-    }
-
-    // Checkout function
-    function checkout() {
-      alert("Proceeding to checkout...");
-      localStorage.removeItem('cart');
-      updateCartDisplay();
-    }
-
     // Logout function
     function logout() {
       currentUser = null;
-      document.getElementById('user-dashboard').classList.remove('show');
-      alert("You have logged out.");
+      showLoginForm();
     }
 
-    // Initializing the page
-    showDashboard();
-    updateCartDisplay();
+    // Initially show the login form
+    showLoginForm();
   </script>
 
   <script src="node.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
+
